# goldbach-horizon

./: AUDIT_NOTE.md  BUILD.sh  Goldbach.lean  README.md  lake-manifest.json  lakefile.lean  phase7v2.patch
Goldbach/: A2Certificate.lean  A2CertificateData.lean  A2PureAnalytic.lean  AxiomsToLemmas.lean  Basic.lean  BreakpointGrid.lean  Budget.lean  Collage.lean  CompactWindowShadow.lean  DominationRatioComputable.lean  ExpBounds.lean  Framework.lean  FredholmOTSA.lean  G43Budget.lean  Goldbach (2).lean  HerglotzPositivity.lean  Interfaces.lean  InterfacesStrong.lean  InterfacesStrongBridge.lean  IntervalArith.lean  MellinJackson.lean  NumeratorAll.lean  PCBGallagher.lean  PrimeCrystalModel.lean  PrimeLogEnclosures.lean  PrimeLogEnclosures01.lean  PrimeLogEnclosures02.lean  PrimeLogEnclosures03.lean  PrimeLogEnclosures04.lean  PrimeLogEnclosures05.lean  PrimeLogEnclosures06.lean  PrimeLogEnclosures07.lean  PrimeLogEnclosures08.lean  PrimeLogEnclosures09.lean  (+14 more)
MT/: MT_README.md
tools/proof_factory/: .gitignore  main.py  proof_factory.yaml  pyproject.toml
tools/proof_factory/pf/: attempt_engine.py  build_parser.py  certificate_templates.py  certificates.py  config.py  git_utils.py  goal_specializers.py  lean_runner.py  models.py  numeric_workers.py  parser_lean.py  patcher.py  prioritizer.py  proof_templates.py  report.py  retry_policy.py  scanner.py  semantic_audit.py  status_board.py  utils.py
tools/proof_factory/scripts/: run_autoclose.py  run_certificates.py  run_checkpoint.py  run_goal.py  run_inventory.py  run_report.py  run_semantic_audit.py  run_status_board.py
(+54 files in other folders)
